--- a/substacks.html
+++ b/substacks.html
@@ -1,3 +1,6 @@
+---
+---
+{%include index-header.html%}
 <a href="#apartment">apartment</a>
 <a href="#2019plus">2019plus</a>
 <a href="#namespt1">namespt1</a>
