--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       style="fill:white;"  d="M81.781,86.906c-4.973,0-9.155,3.475-10.219,8.125c-0.427-0.089-0.859-0.125-1.312-0.125c-3.571,0-6.469,2.898-6.469,6.469c0,3.354,2.574,6.115,5.844,6.438v0.031H81.25v-0.031c0.175,0.009,0.354,0.031,0.531,0.031c5.777,0,10.438-4.691,10.438-10.469C92.219,91.597,87.559,86.906,81.781,86.906z" />
   </svg>
   <div>
-    <address>info@2dcloud.com</address>
-    <a href="https://shop.2dcloud.com">Shop</a> <a href="substacks.html">Substacks</a> <a href="nou">nou</a> <a href='/paul-peng-sketchbook.html'>Sketchbook by Paul Peng</a> <a
+    <a href="https://shop.2dcloud.com">Shop</a> <a href="substacks.html">Substacks</a> <a href="nou">Nou</a> <a href='/paul-peng-sketchbook.html'>Sketchbook by Paul Peng</a> <a
         href='/margot-ferrick-sketchbook.html'>Sketchbooks by Margot Ferrick</a> <a
         href='/blaise-larmee-sketchbook.html'>Sketchbook by Blaise Larmee</a> <a href='/cake-2015.html'>Cake 2015</a> <a
         href='/a-new-york-story.html'>A New York Story</a> <a href='/tcaf-2015.html'>TCAF 2015</a> <a
@@ -34,6 +33,7 @@
         href='/marinaomi-apology-not-acceptable.html'>Apology Not Acceptable</a> <a href='/zak-sally-interview.html'>Zak
         Sally</a> <a href='/scott-longo-interview.html'>Scott Longo</a> <a href='/moonbaby.html'>Moonbaby</a> </div>
   </div>
+  <address>info@2dcloud.com</address>
 </body>
 
 </html>
