--- a/blaise-larmee-sketchbook.html
+++ b/blaise-larmee-sketchbook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Sketchbook by Blaise Larmee </title>
+<style>a,body{color:white;}img{width:auto;height:auto;max-height:200vh;max-width:200vw;}</style>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon' />
