--- a/nou/index.html
+++ b/nou/index.html
@@ -1,5 +1,5 @@
 
-<style>a,body{color:white;background:red;}</style>
+<style>a,body{color:white;background:red;}img{width:auto;height:auto;max-height:200vh;max-width:200vw;}</style>
 <a href="../">
   <svg>
     <path
