--- a/substacks.html
+++ b/substacks.html
@@ -1,4 +1,4 @@
-<head>  <style>a,body{color:white;background:red;}</style><title> A New York Story </title>
+<head>  <style>a,body{color:white;background:red;}img{width:auto;height:auto;max-height:200vh;max-width:200vw;}</style><title> A New York Story </title>
 </head><body>
     <a href="../">
       <svg>
