--- a/a-tunnel-to-another-place.html
+++ b/a-tunnel-to-another-place.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <style>a,body{color:white;background:red;}</style><title> A Tunnel to Another Place </title>
+  <style>a,body{color:white;background:red;}img{width:auto;height:auto;max-height:200vh;max-width:200vw;}</style><title> A Tunnel to Another Place </title>
   <meta charset='UTF-8' />
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon' />
