--- a/nou/index.html
+++ b/nou/index.html
@@ -1,5 +1,7 @@
-
+<head>
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <style>a,body{color:white;background:red;}img{width:auto;height:auto;max-height:200vh;max-width:200vw;}</style>
+</head>
 <a href="../">
   <svg>
     <path
